fix mobile overflow issue in project-box

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ section{
     border: 2px solid var(--main-color);
     border-radius: 3rem;
     gap: 2rem;
-    padding: 5rem 2rem;
+    padding: 5rem;
     overflow: hidden;
     cursor: pointer;
     box-shadow: 0 0 5px var(--main-color);
@@ -511,6 +511,12 @@ section{
     }
     .contact form{
         flex-direction:column;
+    }
+    .project-card img{
+        width:250px;
+    }
+    .project-box{
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
 
